# jit-dielectric

./: .flake8  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: bibliography.bib
docs/notebooks/: simple.ipynb  simple_example.ipynb
electrondielectric/electrongas/: electrongas.py
electrondielectric/stoppingpower/: dielectricstopping.py
electrongas/: MerminDielectric.py  electrongas.py
uegdielectric/: __init__.py
uegdielectric/dielectric/: _Mermin_integrals.py  __init__.py  _dielectric_integrals.py~  dielectric_class.py
uegdielectric/dielectric/tests/: test_dielectric_class.py
uegdielectric/electrongas/: __init__.py  _inv_fermi_integral.py  electrongas.py
uegdielectric/electrongas/tests/: test_electrongas.py  test_inv_fdint_onehalf.py
