[tool.pdm]

[project]
name = "ueg-dielectric"
version = "0.1.0"
description = "A Python project to compute the dielectric function of an electron gas"
authors = [
    {name = "Thomas Hentschel", email = "49924808+twhentschel@users.noreply.github.com"},
]
dependencies = [
    "numpy>=1.24.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
matplotlib = [
    "matplotlib>=3.7.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
